[gd_scene load_steps=2 format=3 uid="uid://btwwwu384186b"]

[ext_resource type="Script" uid="uid://chonofqx44nlh" path="res://ui/ui_components/quest_card.gd" id="1_17e8w"]

[node name="QuestCard" type="PanelContainer"]
script = ExtResource("1_17e8w")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DifficultyLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="RewardLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="WeightsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Key Stats"

[node name="StatWeightsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AcceptButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
